[tool.poetry]
name = "khself-b"
version = "0.1.0"
description = ""
authors = ["khs <hyeongs2323@gmail.com>"]
readme = "README.md"
packages = [{include = "khself_b"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
